--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -193,11 +193,9 @@
       <!-- 上：PDF 預覽 -->
       <ng-template #panel [stateKey]="'panel2-top'">
         <p-scrollPanel style="width:100%; height:100%;" class="position-relative full-height">
-          <object *ngIf="safeUrl" [data]="safeUrl" type="application/pdf" width="100%" height="100%" class="border-none d-block">
-            <div>無法預覽 PDF，請<a [href]="safeUrl" target="_blank" class="text-blue-600 underline">下載檔案</a>。</div>
-          </object>
+          <iframe *ngIf="viewerUrl" [src]="viewerUrl" width="100%" height="100%" frameborder="0"></iframe>
           <div *ngIf="dragging" class="drag-overlay"></div>
-          <div *ngIf="!safeUrl" class="text-gray-500">請選擇有 PDF 檔案的合約</div>
+          <div *ngIf="!viewerUrl" class="text-gray-500">請選擇有 PDF 檔案的合約</div>
         </p-scrollPanel>
       </ng-template>
       <!-- 下：備忘錄區 -->
