--- a/src/app/components/contract/contract.component.scss
+++ b/src/app/components/contract/contract.component.scss
@@ -136,3 +136,8 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
+:host ::ng-deep iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
